--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
           <div class="subheading mb-5">Munich Area, Germany · (+49) 152 3438 3063 ·
             <a href="mailto:name@email.com">kamil.kczyk@email.com</a>
           </div>
-          <p class="mb-5">I am an aerospace engineer turned data scientist working on digitalization of helicopter industry. My professional interests include Artificial Intelligence, Robotics and Autonomous Systems such as Self-Driving Cars. After hours I love to run and recently run a 3h 13m Munich Marathon.</p>
+          <p class="mb-5">I am an aerospace engineer turned data scientist working on digitalization of helicopter industry @Airbus. My professional interests include Artificial Intelligence, Robotics and Autonomous Systems such as Self-Driving Cars. After hours I love running and recently completed my 3rd marathon.</p>
           <ul class="list-inline list-social-icons mb-0">
             <li class="list-inline-item">
               <a href="#">
@@ -87,7 +87,7 @@
               </a>
             </li>
             <li class="list-inline-item">
-              <a href="#">
+              <a href="https://www.linkedin.com/in/kamil-kaczmarczyk/">
                 <span class="fa-stack fa-lg">
                   <i class="fa fa-circle fa-stack-2x"></i>
                   <i class="fa fa-linkedin fa-stack-1x fa-inverse"></i>
