--- a/index.html
+++ b/index.html
@@ -68,18 +68,10 @@
           <div class="subheading mb-5">Munich Area, Germany · (+49) 152 3438 3063 ·
             <a href="mailto:name@email.com">kamil.kczyk@email.com</a>
           </div>
-          <p class="mb-5">I am an aerospace engineer turned data scientist working on digitalization of helicopter industry @Airbus. My professional interests include Artificial Intelligence, Robotics and Autonomous Systems such as Self-Driving Cars. After hours I love running and recently completed my 3rd marathon.</p>
+          <p class="mb-5">I am an aerospace engineer turned data scientist working on digitalization of helicopter industry @Airbus. My professional interests include Artificial Intelligence, Robotics and Autonomous Systems such as Self-Driving Cars. After hours I love running recently completed my 3rd marathon.</p>
           <ul class="list-inline list-social-icons mb-0">
             <li class="list-inline-item">
-              <a href="#">
-                <span class="fa-stack fa-lg">
-                  <i class="fa fa-circle fa-stack-2x"></i>
-                  <i class="fa fa-facebook fa-stack-1x fa-inverse"></i>
-                </span>
-              </a>
-            </li>
-            <li class="list-inline-item">
-              <a href="#">
+              <a href="https://twitter.com/kalerdo_">
                 <span class="fa-stack fa-lg">
                   <i class="fa fa-circle fa-stack-2x"></i>
                   <i class="fa fa-twitter fa-stack-1x fa-inverse"></i>
@@ -94,8 +86,16 @@
                 </span>
               </a>
             </li>
+			<li class="list-inline-item">
+              <a href="https://medium.com/@Kamil_">
+                <span class="fa-stack fa-lg">
+                  <i class="fa fa-circle fa-stack-2x"></i>
+                  <i class="fa fa-medium fa-stack-1x fa-inverse"></i>
+                </span>
+              </a>
+            </li>
             <li class="list-inline-item">
-              <a href="#">
+              <a href="https://github.com/Kamil-K">
                 <span class="fa-stack fa-lg">
                   <i class="fa fa-circle fa-stack-2x"></i>
                   <i class="fa fa-github fa-stack-1x fa-inverse"></i>
