--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
       <a class="navbar-brand js-scroll-trigger" href="#page-top">
         <span class="d-block d-lg-none">Start Bootstrap</span>
         <span class="d-none d-lg-block">
-          <img class="img-fluid img-profile rounded-circle mx-auto mb-4" src="img/profile.jpg" alt="">
+          <img class="img-fluid img-profile rounded-circle mx-auto mb-2" src="img/profile.jpg" alt="">
         </span>
       </a>
       <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
@@ -114,19 +114,11 @@
             <div class="resume-content mr-auto">
               <h3 class="mb-0">R&D Digitalization Engineer</h3>
               <div class="subheading mb-3">Airbus Helicopters</div>
-              <p>+ Project Lead - Function & Digital Platform Development for Helicopter Operations Monitoring
-			  </p>
-			  <p>
-			  + Data Analytics - Data Science for Helicopters Operations
-			  </p>
-			  <p>
-			  + Innovation Lead - data-driven added value for helicopter operational safety and design
-			  </p>
-			  <p>
-			  + Function Design Responsible - Flight Data Continuous Recording avionics embedded solution
-			  </p>
-			  <p>
-			  + Research Engineer - Predictive Maintenance, Health / Vibration / Usage Monitoring</p>
+              <p>+ Project Lead - Function & Digital Platform Development for Helicopter Operations Monitoring</p>
+			  <p>+ Data Analytics - Data Science for Helicopters Operations</p>
+			  <p>+ Innovation Lead - data-driven added value for helicopter operational safety and design</p>
+			  <p>+ Function Design Responsible - Flight Data Continuous Recording avionics embedded solution</p>
+			  <p>+ Research Engineer - Predictive Maintenance, Health / Vibration / Usage Monitoring</p>
             </div>
             <div class="resume-date text-md-right">
               <span class="text-primary">July 2013 - Present</span>
@@ -138,8 +130,7 @@
               <h3 class="mb-0">Master Thesis Student - Machine Learning</h3>
               <div class="subheading mb-3">Airbus Helicopters</div>
               <p>+ Thesis subject: Anomaly Detection and Analysis in Flight Test Data</p>
-			  <p>+ Performed Machine Learning research and built an unsupervised learning model and an end-to-end pipeline to identify and rank anomalies and unusual events in flight data for data cleaning and quality improvement as well as identification of abnormal flight phases and situations for operations safety.
-			  </p>
+			  <p>+ Performed Machine Learning research and built an unsupervised learning model and an end-to-end pipeline to identify and rank anomalies and unusual events in flight data for data cleaning and quality improvement as well as identification of abnormal flight phases and situations for operations safety.</p>
             </div>
             <div class="resume-date text-md-right">
               <span class="text-primary">June 2012 - December 2012</span>
@@ -150,10 +141,8 @@
             <div class="resume-content mr-auto">
               <h3 class="mb-0">Intern - Space Mechatronics and Robotics</h3>
               <div class="subheading mb-3">Space Research Center - Polish Academy of Sciences</div>
-              <p>+ Made a test-bed for investigations of dynamic properties, control algorithms and trajectory planning of space manipulators working in the simulated micro-gravity conditions.
-			  </p>
-			  <p>+ Designed and conducted a series of experiments of Differential Analyzer Thermophob instrument designed with Russian Federal Space Agency Roscosmos for Phobos-Grunt Martian Moon mission.
-			  </p>
+              <p>+ Made a test-bed for investigations of dynamic properties, control algorithms and trajectory planning of space manipulators working in the simulated micro-gravity conditions. </p>
+			  <p>+ Designed and conducted a series of experiments of Differential Analyzer Thermophob instrument designed with Russian Federal Space Agency Roscosmos for Phobos-Grunt Martian Moon mission.</p>
 			  <p>+ Wrote prototype SW for motion analysis of a tumbling satellite leading to docking operation of two spacecraft. Podcasting operational change management inside of workflows to establish a framework. Taking seamless key performance indicators offline to maximise the long tail. Keeping your eye on the ball while performing a deep dive on the start-up mentality to derive convergence on cross-platform integration.</p>
             </div>
             <div class="resume-date text-md-right">
@@ -187,8 +176,7 @@
             <div class="resume-content mr-auto">
               <h3 class="mb-0">Working Student - European Student Moon Orbiter</h3>
               <div class="subheading mb-3">Students' Space Association - Warsaw University of Technology</div>
-              <p>+ Responsible for radiation aspects of Thermal Control System TCS
-			  </p>
+              <p>+ Responsible for radiation aspects of Thermal Control System TCS</p>
 			  <p>+ PR & Managment for TCS Team</p>
             </div>
             <div class="resume-date text-md-right">
@@ -204,11 +192,33 @@
         <div class="my-auto">
           <h2 class="mb-5">Education</h2>
 
+		  <div class="resume-item d-flex flex-column flex-md-row mb-5">
+            <div class="resume-content mr-auto">
+              <h3 class="mb-0">Udacity</h3>
+              <div class="subheading mb-3">Self-Driving Car</div>
+              <div>Deep Learning, Computer Vision, Sensor Fusion, Localization, Control, Vehicle Kinematics, Path Planning and Hardware.</div>
+            </div>
+            <div class="resume-date text-md-right">
+              <span class="text-primary">February 2017 - December 2017</span>
+            </div>
+          </div>
+		  
+		  <div class="resume-item d-flex flex-column flex-md-row mb-5">
+            <div class="resume-content mr-auto">
+              <h3 class="mb-0">Udacity</h3>
+              <div class="subheading mb-3">Machine Learning</div>
+              <div>Model Building & Validation, Supervised Learning, Unsupervised Learning, Reinforcement Learning and Deep Learning.</div>
+            </div>
+            <div class="resume-date text-md-right">
+              <span class="text-primary">October 2016 - October 2017</span>
+            </div>
+          </div>
+		  
           <div class="resume-item d-flex flex-column flex-md-row mb-5">
             <div class="resume-content mr-auto">
               <h3 class="mb-0">University of Glasgow</h3>
               <div class="subheading mb-3">Master of Engineering</div>
-              <div>Aeronautical Engineering</div>
+              <div>Aerospace Systems, Autonomous Flight, Radars, Sensors, Troubleshooting Methods, Controls, Flight & Space Dynamics.</div>
             </div>
             <div class="resume-date text-md-right">
               <span class="text-primary">August 2009 - May 2013</span>
@@ -286,7 +296,10 @@
       <section class="resume-section p-3 p-lg-5 d-flex flex-column" id="interests">
         <div class="my-auto">
           <h2 class="mb-5">Interests</h2>
-          <p>Marathon running, still art drawing, cinema and architecture.</p>
+          <p>Marathon running</p>
+		  <p>Still art drawing</p>
+		  <p>Aviation - pilot license for gliders and small aircraft</p>
+		  <p>Cinema</p>
         </div>
       </section>
 
