--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
           <div class="subheading mb-5">Munich Area, Germany · (+49) 152 3438 3063 ·
             <a href="mailto:name@email.com">kamil.kczyk@email.com</a>
           </div>
-          <p class="mb-5">I am an aerospace engineer turned data scientist working on digitalization of helicopter industry @Airbus. My professional interests include Artificial Intelligence, Robotics and Autonomous Systems such as Self-Driving Cars. After hours I love running recently completed my 3rd marathon.</p>
+          <p class="mb-5">I am an aerospace engineer turned data scientist working on digitalization of helicopter industry @Airbus. My professional interests include Artificial Intelligence, Robotics and Autonomous Systems such as Self-Driving Cars. After hours I love running and recently completed my 3rd marathon.</p>
           <ul class="list-inline list-social-icons mb-0">
             <li class="list-inline-item">
               <a href="https://twitter.com/kalerdo_">
@@ -130,7 +130,7 @@
               <h3 class="mb-0">Master Thesis Student - Machine Learning</h3>
               <div class="subheading mb-3">Airbus Helicopters</div>
               <p>+ Thesis subject: Anomaly Detection and Analysis in Flight Test Data</p>
-			  <p>+ Performed Machine Learning research and built an unsupervised learning model and an end-to-end pipeline to identify and rank anomalies and unusual events in flight data for data cleaning and quality improvement as well as identification of abnormal flight phases and situations for operations safety.</p>
+			  <p>+ Performed Machine Learning research and built an unsupervised learning model and an end-to-end pipeline to identify and rank anomalies and unusual events in flight data for data quality improvement and identification of abnormal flight phases and situations for operations safety.</p>
             </div>
             <div class="resume-date text-md-right">
               <span class="text-primary">June 2012 - December 2012</span>
@@ -141,9 +141,9 @@
             <div class="resume-content mr-auto">
               <h3 class="mb-0">Intern - Space Mechatronics and Robotics</h3>
               <div class="subheading mb-3">Space Research Center - Polish Academy of Sciences</div>
-              <p>+ Made a test-bed for investigations of dynamic properties, control algorithms and trajectory planning of space manipulators working in the simulated micro-gravity conditions. </p>
-			  <p>+ Designed and conducted a series of experiments of Differential Analyzer Thermophob instrument designed with Russian Federal Space Agency Roscosmos for Phobos-Grunt Martian Moon mission.</p>
-			  <p>+ Wrote prototype SW for motion analysis of a tumbling satellite leading to docking operation of two spacecraft. Podcasting operational change management inside of workflows to establish a framework. Taking seamless key performance indicators offline to maximise the long tail. Keeping your eye on the ball while performing a deep dive on the start-up mentality to derive convergence on cross-platform integration.</p>
+              <p>+ Made a test-bed for investigations of dynamic properties, control algorithms and trajectory planning of space manipulators in micro-gravity conditions. </p>
+			  <p>+ Conducted a test campaign of Differential Analyzer Thermophob instrument designed for Phobos-Grunt Martian Moon mission</p>
+			  <p>+ Wrote prototype SW for motion analysis of a tumbling satellite leading to docking operation of two spacecraft</p>
             </div>
             <div class="resume-date text-md-right">
               <span class="text-primary">June 2011 - August 2011</span>
@@ -154,7 +154,8 @@
             <div class="resume-content mr-auto">
               <h3 class="mb-0">Working Student - European Student Earth Orbiter</h3>
               <div class="subheading mb-3">European Space Agency & Space Advanced Research Team at University of Glasgow</div>
-              <p>+ Designed two micro-satellite simulators: Thermal Spacecraft Simulator computing the external radiation fluxes and attitude with trajectory as well as Electrical Harness Spacecraft Simulator optimising harness, electromagnetic field and weight together with power consumption.</p>
+              <p>+ Designed Thermal Spacecraft Simulator computing the external radiation fluxes and attitude with trajectory</p>
+			  <p>+ Built Electrical Harness Spacecraft Simulator optimising harness, electromagnetic field and weight together with power consumption</p>
             </div>
             <div class="resume-date text-md-right">
               <span class="text-primary">November 2009 - July 2010</span>
@@ -217,8 +218,8 @@
           <div class="resume-item d-flex flex-column flex-md-row mb-5">
             <div class="resume-content mr-auto">
               <h3 class="mb-0">University of Glasgow</h3>
-              <div class="subheading mb-3">Master of Engineering</div>
-              <div>Aerospace Systems, Autonomous Flight, Radars, Sensors, Troubleshooting Methods, Controls, Flight & Space Dynamics.</div>
+              <div class="subheading mb-3">Master of Engineering - Aeronautical Engineering</div>
+			  <div>Aerospace Systems, Autonomous Flight, Radars, Sensors, Troubleshooting Methods, Controls, Flight & Space Dynamics.</div>
             </div>
             <div class="resume-date text-md-right">
               <span class="text-primary">August 2009 - May 2013</span>
@@ -228,8 +229,7 @@
           <div class="resume-item d-flex flex-column flex-md-row">
             <div class="resume-content mr-auto">
               <h3 class="mb-0">University of Illinois at Urbana-Champaign</h3>
-              <div class="subheading mb-3">International Exchange</div>
-			  <div>Aerospace Engineering</div>
+              <div class="subheading mb-3">International Exchange - Aerospace Engineering</div>
             </div>
             <div class="resume-date text-md-right">
               <span class="text-primary">August 2010 - May 2011</span>
@@ -239,8 +239,7 @@
           <div class="resume-item d-flex flex-column flex-md-row">
             <div class="resume-content mr-auto">
               <h3 class="mb-0">Warsaw University of Technology</h3>
-              <div class="subheading mb-3">First Year</div>
-			  <div>Aerospace Engineering, Robotics and Power Engineering</div>
+              <div class="subheading mb-3">First Year - Aerospace Engineering, Robotics and Power Engineering</div>
             </div>
             <div class="resume-date text-md-right">
               <span class="text-primary">October 2008 - June 2009</span>
@@ -291,15 +290,34 @@
               Linux</li>
           </ul>
         </div>
+		
+		<div class="subheading mb-3">Languages</div>
+          <ul class="fa-ul mb-0">
+            <li>
+              <i class="fa-li fa fa-check"></i>
+              English - Fluent</li>
+            <li>
+              <i class="fa-li fa fa-check"></i>
+              Polish - Native</li>
+            <li>
+              <i class="fa-li fa fa-check"></i>
+              German - Advanced (C1 TestDaf)</li>
+            <li>
+              <i class="fa-li fa fa-check"></i>
+              French - Beginner (A1)</li>
+            <li>
+          </ul>
+        </div>
+		
       </section>
 
       <section class="resume-section p-3 p-lg-5 d-flex flex-column" id="interests">
         <div class="my-auto">
           <h2 class="mb-5">Interests</h2>
-          <p>Marathon running</p>
-		  <p>Still art drawing</p>
-		  <p>Aviation - pilot license for gliders and small aircraft</p>
-		  <p>Cinema</p>
+          <p>+ Marathon running</p>
+		  <p>+ Still art drawing</p>
+		  <p>+ Aviation - pilot license for gliders and small aircraft</p>
+		  <p>+ Cinema</p>
         </div>
       </section>
 
