--- a/index.html
+++ b/index.html
@@ -114,11 +114,11 @@
             <div class="resume-content mr-auto">
               <h3 class="mb-0">R&D Digitalization Engineer</h3>
               <div class="subheading mb-3">Airbus Helicopters</div>
-              <p>+ Project Lead - Function & Digital Platform Development for Helicopter Operations Monitoring</p>
-			  <p>+ Data Analytics - Data Science for Helicopters Operations</p>
-			  <p>+ Innovation Lead - data-driven added value for helicopter operational safety and design</p>
-			  <p>+ Function Design Responsible - Flight Data Continuous Recording avionics embedded solution</p>
-			  <p>+ Research Engineer - Predictive Maintenance, Health / Vibration / Usage Monitoring</p>
+              <p>+ <b>Project Lead</b> - Function & Digital Platform Development for Helicopter Operations Monitoring</p>
+			  <p>+ <b>Data Analytics</b> - Data Science for Helicopters Operations</p>
+			  <p>+ <b>Innovation Lead</b> - data-driven added value for helicopter operational safety and design</p>
+			  <p>+ <b>Function Design Responsible</b> - Flight Data Continuous Recording avionics embedded solution</p>
+			  <p>+ <b>Research Engineer</b> - Predictive Maintenance, Health / Vibration / Usage Monitoring</p>
             </div>
             <div class="resume-date text-md-right">
               <span class="text-primary">July 2013 - Present</span>
@@ -130,7 +130,7 @@
               <h3 class="mb-0">Master Thesis Student - Machine Learning</h3>
               <div class="subheading mb-3">Airbus Helicopters</div>
               <p>+ Thesis subject: Anomaly Detection and Analysis in Flight Test Data</p>
-			  <p>+ Performed Machine Learning research and built an unsupervised learning model and an end-to-end pipeline to identify and rank anomalies and unusual events in flight data for data quality improvement and identification of abnormal flight phases and situations for operations safety.</p>
+			  <p>+ Performed Machine Learning research and built an unsupervised learning end-to-end pipeline to identify and rank anomalies and unusual events in flight data for data quality improvement and identification of abnormal flight phases and situations for operations safety.</p>
             </div>
             <div class="resume-date text-md-right">
               <span class="text-primary">June 2012 - December 2012</span>
@@ -178,7 +178,6 @@
               <h3 class="mb-0">Working Student - European Student Moon Orbiter</h3>
               <div class="subheading mb-3">Students' Space Association - Warsaw University of Technology</div>
               <p>+ Responsible for radiation aspects of Thermal Control System TCS</p>
-			  <p>+ PR & Managment for TCS Team</p>
             </div>
             <div class="resume-date text-md-right">
               <span class="text-primary">February 2008 - June 2008</span>
