--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
             <span class="text-primary">Kaczmarczyk</span>
           </h1>
           <div class="subheading mb-5">Munich Area, Germany · (+49) 152 3438 3063 ·
-            <a href="mailto:name@email.com">kamil.kczyk@email.com</a>
+            <a href="mailto:name@email.com">kamil.kczyk@gmail.com</a>
           </div>
           <p class="mb-5">I am an aerospace engineer turned data scientist working on digitalization of helicopter industry @Airbus. My professional interests include Artificial Intelligence, Robotics and Autonomous Systems such as Self-Driving Cars. After hours I love running and recently completed my 3rd marathon.</p>
           <ul class="list-inline list-social-icons mb-0">
