--- a/index.html
+++ b/index.html
@@ -1,100 +1,55 @@
 <!DOCTYPE html>
 <html lang="en">
+	<head>
+		<meta charset="utf-8">
 
-  <head>
+		<title>Kamil KACZMARCZYK</title>
+		<meta name="description" content="I am an aerospace engineer turned data scientist working on digitalization of helicopter industry @Airbus.Airbus."/>
+		<meta name="keywords" content="Kamil Kaczmarczyk, Autonomous Systems, Machine Learning, artificial intelligence, aerospace, engineer, helicopters, Robotics, autonomous driving, self-driving car" />
 
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <meta name="description" content="">
-    <meta name="author" content="">
+		<meta name="viewport" content="width=device-width, initial-scale=1.0">
+		<link rel="icon" href="img/favicon.ico" type="image/x-icon">
+		<link rel="stylesheet" href="css/style.css">
 
-    <title>Kamil Kaczmarczyk - Landing Page</title>
+		<!--[if lt IE 9]>
+			<script src="http://html5shim.googlecode.com/svn/trunk/html5.js"></script>
+		<![endif]-->
+			<!-- Global site tag (gtag.js) - Google Analytics -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=UA-109112943-1"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
 
-    <!-- Bootstrap core CSS -->
-    <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
+  gtag('config', 'UA-109112943-1');
+</script>
 
-    <!-- Custom fonts for this template -->
-    <link href="https://fonts.googleapis.com/css?family=Saira+Extra+Condensed:100,200,300,400,500,600,700,800,900" rel="stylesheet">
-    <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,300i,400,400i,600,600i,700,700i,800,800i" rel="stylesheet">
-    <link href="vendor/font-awesome/css/font-awesome.min.css" rel="stylesheet">
-    <link href="vendor/devicons/css/devicons.min.css" rel="stylesheet">
-    <link href="vendor/simple-line-icons/css/simple-line-icons.css" rel="stylesheet">
+	</head>
 
-    <!-- Custom styles for this template -->
-    <link href="css/resume.min.css" rel="stylesheet">
+	<body class="animated bounceInDown">
+		<div class="avatar">
+			<img src="img/avatar.jpg" alt="Kamil Kaczmarczyk">
+		</div>
 
-  </head>
+		<div class="content">
+			<h1 class="title">Kamil<br>Kaczmarczyk</h1>
+			<p> MUNICH AREA, GERMANY, tel. <a href="callto:+49 152 3438 3063"> +49 152 3438 3063</a>
+			<p>
+				I am an aerospace engineer turned data scientist working on digitalization of helicopter industry @Airbus.<br>
+				My professional interests include Innovation, Artificial Intelligence, Robotics and Autonomous Systems such as Self-Driving Cars or Drones. I am passionate about technology changing our world.<br>
+				
+				After hours I love running and have completed a number of marathons.
+			</p>
 
-  <body id="page-top">
+			<ul class="social-icons">
+				<li><a class="twitter" href="https://twitter.com/kalerdo_" title="Twitter">Twitter</a></li>
+				<li><a class="medium" href="https://medium.com/@Kamil_" title="Medium">Medium</a></li>
+				<li><a class="github" href="https://github.com/Kamil-K" title="Github">Github</a></li>
+				<li><a class="linkedin" href="https://www.linkedin.com/in/kamil-kaczmarczyk/" title="Linkedin">Linkedin</a></li>
+				<li><a class="qr_code" target="_blank" href="img/QR_visiting_card.png" title="QR visiting card">QR Code</a></li>
+			</ul>
 
-    <nav class="navbar navbar-expand-lg navbar-dark bg-primary fixed-top" id="sideNav">
-      <a class="navbar-brand js-scroll-trigger" href="#page-top">
-        <span class="d-block d-lg-none">Kamil</span>
-      </a>
-    </nav>
-
-    <div class="container-fluid p-0">
-
-      <section class="resume-section p-3 p-lg-5 d-flex d-column" id="about">
-        <div class="my-auto">
-          <h1 class="mb-0">Kamil
-          </h1>
-		  <h1 class="mb-0">
-            <span class="text-primary">Kaczmarczyk</span>
-          </h1>
-          <div class="subheading mb-5">Munich Area, Germany · (+49) 152 3438 3063 ·
-            <a href="mailto:name@email.com">kamil.kczyk@gmail.com</a>
-          </div>
-          <p class="mb-5">I am an aerospace engineer turned data scientist working on digitalization of helicopter industry @Airbus. My professional interests include Artificial Intelligence, Robotics and Autonomous Systems such as Self-Driving Cars. After hours I love running and recently completed my 3rd marathon.</p>
-          <ul class="list-inline list-social-icons mb-0">
-            <li class="list-inline-item">
-              <a href="https://twitter.com/kalerdo_">
-                <span class="fa-stack fa-lg">
-                  <i class="fa fa-circle fa-stack-2x"></i>
-                  <i class="fa fa-twitter fa-stack-1x fa-inverse"></i>
-                </span>
-              </a>
-            </li>
-            <li class="list-inline-item">
-              <a href="https://www.linkedin.com/in/kamil-kaczmarczyk/">
-                <span class="fa-stack fa-lg">
-                  <i class="fa fa-circle fa-stack-2x"></i>
-                  <i class="fa fa-linkedin fa-stack-1x fa-inverse"></i>
-                </span>
-              </a>
-            </li>
-			<li class="list-inline-item">
-              <a href="https://medium.com/@Kamil_">
-                <span class="fa-stack fa-lg">
-                  <i class="fa fa-circle fa-stack-2x"></i>
-                  <i class="fa fa-medium fa-stack-1x fa-inverse"></i>
-                </span>
-              </a>
-            </li>
-            <li class="list-inline-item">
-              <a href="https://github.com/Kamil-K">
-                <span class="fa-stack fa-lg">
-                  <i class="fa fa-circle fa-stack-2x"></i>
-                  <i class="fa fa-github fa-stack-1x fa-inverse"></i>
-                </span>
-              </a>
-            </li>
-          </ul>
-        </div>
-      </section>
-
-    </div>
-
-    <!-- Bootstrap core JavaScript -->
-    <script src="vendor/jquery/jquery.min.js"></script>
-    <script src="vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
-
-    <!-- Plugin JavaScript -->
-    <script src="vendor/jquery-easing/jquery.easing.min.js"></script>
-
-    <!-- Custom scripts for this template -->
-    <script src="js/resume.min.js"></script>
-
-  </body>
-
+			<p>Want to contact me? <a href="mailto:kamil.kczyk@gmail.com">Email me</a>.</p>
+		</div>
+	</body>
 </html>
