--- a/index.html
+++ b/index.html
@@ -35,12 +35,9 @@
 			<h1 class="title">Kamil<br>Kaczmarczyk</h1>
 			<p> MUNICH AREA, GERMANY, tel. <a href="callto:+49 152 3438 3063"> +49 152 3438 3063</a>
 			<p>
-				I am an aerospace engineer turned data scientist working on digitalization of helicopter industry @Airbus.<br>
-				My professional interests include Innovation, Artificial Intelligence, Robotics and Autonomous Systems such as Self-Driving Cars or Drones. I am passionate about technology changing our world.<br>
-				
-				After hours I love running and have completed a number of marathons.
+			I am an aerospace engineer turned data scientist working on digitalization of helicopter industry @Airbus. My professional interests include AI, Robotics and Autonomous Systems such as Self-Driving Cars or Drones. After hours I love travelling to far away lands and have completed a number of marathons.
 			</p>
-
+			
 			<ul class="social-icons">
 				<li><a class="twitter" href="https://twitter.com/kalerdo_" title="Twitter">Twitter</a></li>
 				<li><a class="medium" href="https://medium.com/@Kamil_" title="Medium">Medium</a></li>
@@ -48,8 +45,8 @@
 				<li><a class="linkedin" href="https://www.linkedin.com/in/kamil-kaczmarczyk/" title="Linkedin">Linkedin</a></li>
 				<li><a class="qr_code" target="_blank" href="img/QR_visiting_card.png" title="QR visiting card">QR Code</a></li>
 			</ul>
-
-			<p>Want to contact me? <a href="mailto:kamil.kczyk@gmail.com">Email me</a>.</p>
+			<p>I am open to meet you and hear your story. Want to get in touch? <a href="mailto:kamil.kczyk@gmail.com">Email me</a>.</p>
+			
 		</div>
 	</body>
 </html>
