--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
 			<h1 class="title">Kamil<br>Kaczmarczyk</h1>
 			<p> MUNICH AREA, GERMANY, tel. <a href="callto:+49 152 3438 3063"> +49 152 3438 3063</a>
 			<p>
-			I am an aerospace engineer turned data scientist working on digitalization of helicopter industry @Airbus. My professional interests include Smart City, New Mobility and technologies such as AI, Robotics and Autonomous Systems for Self-Driving Cars and Drones. After hours I love travelling to far away lands and have completed a number of marathons.
+			I am an aerospace engineer turned data scientist working on digitalization of helicopters @Airbus. My professional interests include Intelligent Systems, AI, Robotics and Autonomous Systems such as Self-Driving Cars and Drones. I believe in system thinking and problem-solving from first principles. After hours I love travelling to far away lands and have completed a number of marathons.
 			</p>
 			
 			<ul class="social-icons">
